--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <title>Little Lemon</title>
     <meta
       name="description"
       content="We are a family owned Mediterranean restaurant. Focused on traditional recipes served with a modern twist"
